# vue3-tailwindcss3-blog

./: .gitignore  README.md  daemon.json  index.html  package-lock.json  package.json
blog_admin/: .env  index.html  package-lock.json  service.config.ts  vite.config.ts
blog_admin/src/: main.ts
blog_front/: README.md  package-lock.json  package.json  vite.config.js
blog_front/src/: App.vue  main.js
deploy/: .gitignore  README.md  blog.sql  docker-compose-env.yml  emby.yml  filerun.yml  init.sql  jellyfin.yml  meilisearch.yml  mysql.yml  start.env.sh  zfile.yml
docs/: README.md  admin_doc.md
docs/blog_front_docs/: README.md
project_server/: mock.js
project_server/go_server/: .dev.env  .env  README.md  db_test.go  go.mod  go.sum  main.go
project_server/java_server/: pom.xml
project_server/rust_iot_server/: .env  .gitignore  Cargo.toml  README.md
project_server/rust_iot_server/entity/: Cargo.toml
project_server/rust_iot_server/entity/src/: article_tag_rela.rs  articles.rs  leave_messages.rs  mod.rs  prelude.rs  tags.rs  users.rs
project_server/rust_iot_server/src/: .dev.env  main.rs
project_server/rust_iot_server/src/controller/: demo.rs
project_server/rust_iot_server/src/db/: mod.rs
project_server/rust_iot_server/src/dto/: resp.rs
project_server/rust_iot_server/src/router/: mod.rs
src/: App.vue
src/components/: ArticleListComp.vue  FooterComp.vue  HeaderComp.vue  PageComp.vue
src/router/: index.js
src/views/: ArticleDetailView copy.vue  ArticleDetailView.vue  HomeView.vue  (+2 more)
vite-project/: index.html  package-lock.json  package.json
(+166 files in other folders)
