[package]
name = "rust_iot_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.7"
tokio = { version = "1.4.0", features = ["full"] }
serde={version="1.0.210", features = ["derive"] }
tracing-subscriber={version="0.3.18"}
sea-orm = { version = "1.1.0", features = [ "sqlx-mysql", "tokio", "macros" ] }
